--- a/SphericalHarmonicsPaper/NIMA/50-Conclusions.tex
+++ b/SphericalHarmonicsPaper/NIMA/50-Conclusions.tex
@@ -1,15 +1,14 @@
 \section{Conclusions}
-A technique based on spherical harmonics analysis is discussed to
+A technique based on spherical harmonics analysis can
 separate 0{\nbb} decay from $^{8}$B solar neutrino interactions. The
-separation is based on distinct event topologies of signal and
+separation is based on the distinct event topologies of signal and
 background. This event topology information is available in addition
 to the measurements of the energy deposited in the detector. This
 technique may be further developed and adopted by future large scale
 liquid scintillator detectors to suppress background coming from
 $^{8}$B solar neutrino interactions in the detector volume. The
 performance of the technique is mostly affected by chromatic
-dispersions, vertex reconstruction and time profile of the emission of
-the scintillation light. We show that a liquid scintillator detector
+dispersions, vertex reconstruction and the time profile of the emission of scintillation light. We show that a liquid scintillator detector
 with a $\sim$1~ns total delay of the scintillation light with respect
-to the Cherenkov light allows for use of spherical harmonics analysis
+to the Cherenkov light allows for use of the spherical harmonics analysis
 as an extra handle to extract 0{\nbb} decay signal.
